<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:id="@+id/tvActiveUser"
        android:layout_alignParentStart="true"
        android:text="@string/activeUser"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/tvActiveUser"
        android:layout_above="@+id/input_container"
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/progress_container"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:background="@drawable/progress_background">

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/process_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loading"
                android:layout_centerInParent="true"
                android:paddingBottom="5dp"
                android:text="Loading..." />
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="visible"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/input_container"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <EditText
            android:imeActionId="@+id/send"
            android:imeActionLabel="@string/send"
            android:maxLines="1"
            android:imeOptions="actionSend"
            android:textSize="16sp"
            android:inputType="textNoSuggestions"
            android:paddingLeft="10dp"
            android:paddingRight="38dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/input_background"
            android:id="@+id/message"
            android:hint="@string/yourMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/send_button"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/message"
            android:layout_alignRight="@+id/message"
            android:layout_alignBottom="@+id/message"
            android:layout_weight="5"
            android:background="@drawable/ic_keyboard_return_black_24dp"
            />

    </RelativeLayout>

</RelativeLayout>